[package]
name = "eth-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "eth-indexer"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
ethers = "2.0.13"
eyre = "0.6.12"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"]}
traversal = {workspace = true }